# sistema-remoto-tulo

./: CMakeLists.txt  Install_Client.bat  Install_Server.bat  README.md  package.ps1
src/: Capture.cpp  Capture.h  Client.cpp  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  InputInjector.cpp  InputInjector.h  Network.cpp  Network.h  main.cpp
